--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,8 +76,8 @@ jobs:
             RELEASE_NAME="${GITHUB_REF_NAME}"
           fi
           if [[ ! -z "${RELEASE_NAME}" ]]; then
-            cp -r $PWD /tmp/gdl && rm -rf /tmp/gdl/.git && cd /tmp
-            tar czf "/tmp/gdl-${RELEASE_NAME}.tar.gz" gdl
+            cp -r $PWD /tmp/gdl-${RELEASE_NAME} && rm -rf /tmp/gdl-${RELEASE_NAME}/.git && cd /tmp
+            tar czf "/tmp/gdl-${RELEASE_NAME}.tar.gz" gdl-${RELEASE_NAME}
             echo "released=true" >> "$GITHUB_OUTPUT"
           fi
       - name: Upload Release Assets (unstable)
