--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -223,10 +223,13 @@ if(USE_OPENMP)
 endif(USE_OPENMP)
 
 add_dependencies(gdl antlr whereami) # be sure that antlr is built before gdl
-target_link_libraries(gdl antlr whereami rt) # link antlr against gdl. added librt for mmap.
+target_link_libraries(gdl antlr whereami) # link antlr against gdl. added librt for mmap (unix only, not osx, apparently)
 if (MINGW)
 target_link_libraries(gdl ws2_32)
 endif (MINGW)
+if (NOT APPLE AND NOT OSX)
+target_link_libraries(gdl rt) # link antlr against gdl. added librt for mmap (unix only, not osx, apparently)
+endif (NOT APPLE AND NOT OSX)
 target_link_libraries(gdl ${LIBRARIES})
 
 add_definitions(-DHAVE_CONFIG_H)
