--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -232,7 +232,7 @@ target_link_libraries(gdl ws2_32)
 endif (MINGW)
 if (NOT APPLE AND NOT OSX AND NOT MINGW)
 target_link_libraries(gdl rt) # link antlr against gdl. added librt for mmap (unix only, not osx, apparently)
-endif (NOT APPLE AND NOT OSX AND NOT MING)
+endif (NOT APPLE AND NOT OSX AND NOT MINGW)
 target_link_libraries(gdl ${LIBRARIES})
 
 add_definitions(-DHAVE_CONFIG_H)
