obtaining version id from git metadata (no more need for version bump commits)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,8 @@ jobs:
           fi
           if [[ ! -z "${RELEASE_NAME}" ]]; then
             cp -r $PWD /tmp/gdl-${RELEASE_NAME} && rm -rf /tmp/gdl-${RELEASE_NAME}/.git && cd /tmp
+            cat src/version.hpp.in | sed "s/@VERSION@/`git describe --tags --dirty --match "v*"`/" > /tmp/gdl-${RELEASE_NAME}/src/version.hpp
+            rm /tmp/gdl-${RELEASE_NAME}/src/version.hpp.in
             tar czf "/tmp/gdl-${RELEASE_NAME}.tar.gz" gdl-${RELEASE_NAME}
             echo "released=true" >> "$GITHUB_OUTPUT"
           fi
