--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,7 +130,7 @@ jobs:
       - name: Set HDF path on macOS usin brew
         # https://stackoverflow.com/questions/66741778/how-to-install-h5py-needed-for-keras-on-macos-with-m1
         if: contains(matrix.os, 'macos')
-        run: export HDF5_DIR="$(brew --prefix hdf5)"
+        run: echo HDF5_DIR="$(brew --prefix hdf5)" >> $GITHUB_ENV
       - name: Build GDL
         run: |
           scripts/build_gdl.sh configure
