Reworked driver install patch.

--- a/src/plplotdriver/CMakeLists.txt
+++ b/src/plplotdriver/CMakeLists.txt
@@ -5,40 +5,52 @@ if(INSTALL_LOCAL_DRIVERS)
 
   #these drivers are always present
   list(APPEND WHAT "ps" "svg" "mem")
-  list(APPEND WHATFILES "mem.driver_info" "svg.driver_info" "ps.driver_info")
   add_library(ps MODULE ps.c)
-  target_link_libraries(
-      ps
-      ${PLPLOT_LIBRARIES}
-      )
+  # Copy thr driver info file after building the target so we can use the build-dir directly when testing
+  add_custom_command(
+    TARGET ps POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+    ${CMAKE_SOURCE_DIR}/src/plplotdriver/ps.driver_info
+    ${CMAKE_CURRENT_BINARY_DIR}/ps.driver_info
+  )
+  target_link_libraries(ps ${PLPLOT_LIBRARIES})
   add_library(svg MODULE svg.c)
-  target_link_libraries(
-      svg
-      ${PLPLOT_LIBRARIES}
-      )
+  # Copy thr driver info file after building the target so we can use the build-dir directly when testing
+  add_custom_command(
+    TARGET svg POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+    ${CMAKE_SOURCE_DIR}/src/plplotdriver/svg.driver_info
+    ${CMAKE_CURRENT_BINARY_DIR}/svg.driver_info
+  )
+  target_link_libraries(svg ${PLPLOT_LIBRARIES})
   add_library(mem MODULE mem.c)
-  target_link_libraries(
-      mem
-      ${PLPLOT_LIBRARIES}
-      )
+  # Copy thr driver info file after building the target so we can use the build-dir directly when testing
+  add_custom_command(
+    TARGET mem POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+    ${CMAKE_SOURCE_DIR}/src/plplotdriver/mem.driver_info
+    ${CMAKE_CURRENT_BINARY_DIR}/mem.driver_info
+  )
+  target_link_libraries(mem ${PLPLOT_LIBRARIES})
 
   #driver wxwidgets
   if (HAVE_LIBWXWIDGETS) 
     set(LINK_DIRECTORIES ${LINK_DIRECTORIES} ${wxWidgets_LIBRARY_DIRS})
     foreach(WXDEF ${wxWidgets_DEFINITIONS})
-        add_definitions(-D${WXDEF})
+      add_definitions(-D${WXDEF})
     endforeach(WXDEF ${wxWidgets_DEFINITIONS})
     include_directories( ${wxWidgets_INCLUDE_DIRS})
     add_library(wxwidgets MODULE deprecated_wxwidgets.cpp deprecated_wxwidgets_app.cpp deprecated_wxwidgets_dc.cpp deprecated_wxwidgets_gc.cpp)
-    target_link_libraries(
-        wxwidgets
-      ${PLPLOT_LIBRARIES}
-        ${wxWidgets_LIBRARIES}
-     )
-     list(APPEND WHAT "wxwidgets")
-     list(APPEND WHATFILES  "wxwidgets.driver_info")
-   endif(HAVE_LIBWXWIDGETS)
-
+    # Copy thr driver info file after building the target so we can use the build-dir directly when testing
+    add_custom_command(
+      TARGET wxwidgets POST_BUILD
+      COMMAND ${CMAKE_COMMAND} -E copy
+      ${CMAKE_SOURCE_DIR}/src/plplotdriver/wxwidgets.driver_info
+      ${CMAKE_CURRENT_BINARY_DIR}/wxwidgets.driver_info
+    )
+    target_link_libraries(wxwidgets ${PLPLOT_LIBRARIES} ${wxWidgets_LIBRARIES})
+    list(APPEND WHAT "wxwidgets")
+  endif(HAVE_LIBWXWIDGETS)
  
   # driver xwin -- check if X11 is present
   find_package(X11 QUIET)
@@ -47,16 +59,16 @@ if(INSTALL_LOCAL_DRIVERS)
     set(LIBRARIES ${LIBRARIES} ${X11_LIBRARIES})
     include_directories(${X11_INCLUDE_DIR})
     add_library(xwin MODULE xwin.c)
-    target_link_libraries(
-        xwin
-      ${PLPLOT_LIBRARIES}
-        ${X11_LIBRARIES}
-        )
-    list (APPEND WHAT "xwin")
-    list(APPEND WHATFILES "wxin.driver_info")
+    # Copy thr driver info file after building the target so we can use the build-dir directly when testing
+    add_custom_command(
+      TARGET xwin POST_BUILD
+      COMMAND ${CMAKE_COMMAND} -E copy
+      ${CMAKE_SOURCE_DIR}/src/plplotdriver/xwin.driver_info
+      ${CMAKE_CURRENT_BINARY_DIR}/xwin.driver_info
+    )
+    target_link_libraries(xwin ${PLPLOT_LIBRARIES} ${X11_LIBRARIES})
+    list(APPEND WHAT "xwin")
  endif(X11_FOUND)
-
-
 
   if(WIN32)
     set(DYNAMIC_SUFFIX ".dll")
@@ -65,9 +77,9 @@ if(INSTALL_LOCAL_DRIVERS)
   endif(WIN32)
 
   foreach(v IN LISTS WHAT)
-  set_target_properties(${v} PROPERTIES   PREFIX ""  SUFFIX ${DYNAMIC_SUFFIX} )
-  install(TARGETS ${v} DESTINATION ${GDL_DRV_DIR})
-  install( FILES ${v}.driver_info DESTINATION ${GDL_DRV_DIR})
+    set_target_properties(${v} PROPERTIES   PREFIX ""  SUFFIX ${DYNAMIC_SUFFIX} )
+    install(TARGETS ${v} DESTINATION ${CMAKE_INSTALL_PREFIX}/${GDL_LIB_DIR})
+    install(FILES ${v}.driver_info DESTINATION ${CMAKE_INSTALL_PREFIX}/${GDL_LIB_DIR})
   endforeach()
 
 endif(INSTALL_LOCAL_DRIVERS)
