--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,6 +131,9 @@ jobs:
         # https://stackoverflow.com/questions/66741778/how-to-install-h5py-needed-for-keras-on-macos-with-m1
         if: contains(matrix.os, 'macos')
         run: echo HDF5_DIR="$(brew --prefix hdf5)" >> $GITHUB_ENV
+      - name: Disable OpenMP for Apple Silicon (FIXME!)
+        if: matrix.os == 'macos-14'
+        run: echo WITH_OPENMP=OFF >> $GITHUB_ENV
       - name: Build GDL
         run: |
           scripts/build_gdl.sh configure
