put all new code in eigenvalues_solvers.*pp Added la_helmes (using Eigen::) Replaced la_trired (using Eigen::, much faster than version based on libGSL) -> to be continued. This gives same resuluts as the real lapack code. Added trired and triql

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ dstructdesc.cpp
 dstructfactory.cxx
 dstructgdl.cpp
 dvar.cpp
-elmhes.cpp
+eigenvalues_solvers.cpp
 envt.cpp
 extrat.cpp
 exists_fun.cpp
