warp 1 and warp_linear1 done poly_2d as separate source

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -158,6 +158,7 @@ plotting_surface.cpp
 plotting_windows.cpp
 plotting_xyouts.cpp
 plotting.cpp
+poly_2d.cpp
 print.cpp
 print_tree.cpp
 prognode.cpp
