following the problems encountered after https://github.com/actions/runner-images/issues/10636 , pending a better solution, use ubuntu-22.04 deemed to be stable.

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   codecov:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       DEPS: debug
       Configuration: Debug
