--- a/.github/workflows/antlr.yml
+++ b/.github/workflows/antlr.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   antlr:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       DEPS: debug
       Configuration: Debug
