--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ on:
  
 jobs:
   prelude:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       matrix-windows: ${{ steps.set-matrix-windows.outputs.matrix_windows }}
       matrix-others: ${{ steps.set-matrix-others.outputs.matrix_others }}
@@ -44,9 +44,9 @@ jobs:
       id: set-matrix-others
       run: |
         if [[ '${{ github.event_name }}' == "schedule" || '${{ github.event.inputs.type }}' == "release" || '${{ github.ref }}' == "refs/tags/v"* ]]; then 
-            matrix="{os: ['ubuntu-latest', 'macos-13', 'macos-15'], deps: ['standard', 'headless'], configuration: ['Release']}"
+            matrix="{os: ['ubuntu-22.04', 'macos-13', 'macos-15'], deps: ['standard', 'headless'], configuration: ['Release']}"
         else
-            matrix="{os: ['ubuntu-latest', 'macos-13', 'macos-15'], deps: ['debug'], configuration: ['Debug']}"
+            matrix="{os: ['ubuntu-22.04', 'macos-13', 'macos-15'], deps: ['debug'], configuration: ['Debug']}"
         fi
         echo "matrix_others=$matrix" >> $GITHUB_OUTPUT
     - name: Remove Release (scheduled build only)
@@ -58,7 +58,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   upload-source-code:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: prelude
     steps:
       - name: Checkout GDL
