trigger CI run of main.yml "on release"

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,10 @@ on:
   push:
     branches:
       - master
-      - '1.0'
     tags:
       - v**
+  release:
+    types: [published]
   pull_request:
   workflow_dispatch:
     inputs:
