--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -274,6 +274,9 @@ if(PYTHON_MODULE)
 else(PYTHON_MODULE)
 	install(TARGETS gdl DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 	set_target_properties(gdl PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+	set(EXPORTED_SYMBOLS_LIST ${CMAKE_CURRENT_SOURCE_DIR}/dynlist.txt)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--dynamic-list=${EXPORTED_SYMBOLS_LIST}")
+	set_target_properties(gdl PROPERTIES LINK_DEPENDS ${EXPORTED_SYMBOLS_LIST})
 endif(PYTHON_MODULE)
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/pro/ DESTINATION ${CMAKE_INSTALL_PREFIX}/${GDL_DATA_DIR}/lib
