--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -283,7 +283,7 @@ if (NOT APPLE AND NOT OSX AND NOT MINGW)
 endif()
 if (APPLE OR OSX )
 	set(EXPORTED_SYMBOLS_LIST ${CMAKE_CURRENT_SOURCE_DIR}/dynlist.txt)
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-exported_symbols_list,${EXPORTED_SYMBOLS_LIST}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-exported_symbols_list ${EXPORTED_SYMBOLS_LIST}")
 	set_target_properties(gdl PROPERTIES LINK_DEPENDS ${EXPORTED_SYMBOLS_LIST})
 endif()
 if (MINGW )
