--- a/src/dlm/CMakeLists.txt
+++ b/src/dlm/CMakeLists.txt
@@ -4,10 +4,8 @@ project(powell  VERSION 1.0.0 DESCRIPTION "loadable shared library providing com
 set(CMAKE_SHARED_LIBRARY_PREFIX "") # prevent to prepend 'lib' to all .so names
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   set(CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS "${CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS} -undefined dynamic_lookup")
-endif()############################################################
-# Create a library
-############################################################
-#Generate the shared library from the library sources
+endif()
+
 add_library(powell SHARED 
     brent.cpp
 )
@@ -17,5 +15,6 @@ set(dlm_files
   ${PROJECT_BINARY_DIR}/powell.so
   powell.dlm
   )
+add_dependencies(powell gdl) # be sure that gdl is built before powell
 
 install(FILES ${dlm_files} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/gnudatalanguage/dlm)
